# usb

./: .gitignore  LICENSE  build_deps.sh  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/usbbootwriter/: Fat32Formatter.kt  LibaumsFileWriter.kt  MainActivity.kt  UsbBufferWriter.kt  UsbWriteService.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: device_filter.xml
